Changed the height to 110vh, a momentary fix for the header to not show a gap at the base when scrolled all the way

--- a/frontend/src/styles/components/_nav.scss
+++ b/frontend/src/styles/components/_nav.scss
@@ -4,7 +4,7 @@
 
 .nav-bar-contatiner-dark {
   width: 14%;
-  height: 100vh;
+  height: 110vh;
   margin: 0px;
   padding-top: 0.75rem;
   padding-left: 1.5rem;
@@ -15,7 +15,7 @@
 .nav-bar-contatiner-light {
   overflow-y: scroll;
   width: 14%;
-  height: 100vh;
+  height: 110vh;
   margin: 0px;
   padding-top: 0.75rem;
   padding-left: 1.5rem;
